--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,12 @@
-body {
-    background-color: skyblue;
+main > .container {
+    padding: 60px 15px 0;
+}
+
+.bg-logo {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    background-image: url("../images/wtfpl-logo.png");
+    background-size: contain;
+    background-repeat: no-repeat;
 }
