--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -15,7 +15,8 @@
             </div>
 
             <h4>
-                You are using Symfony <code>{{ symfony_version }}</code> in <code>{{ app.environment }}</code> mode on PHP
+                We are using Symfony <code>{{ symfony_version }}</code> in <code>{{ app.environment }}</code> mode on
+                PHP
                 <code>{{ php_version }}</code>.
             </h4>
 
@@ -39,11 +40,28 @@
                         Launch demo modal
                     </button>
                 </li>
+                <li>
+                    <p class="muted">Placeholder text to demonstrate some <a href="#" data-bs-toggle="tooltip"
+                                                                             data-bs-title="Default tooltip">inline
+                            links</a> with tooltips. This is now just filler, no killer. Content placed here just to
+                        mimic the presence of <a href="#" data-bs-toggle="tooltip" data-bs-title="Another tooltip">real
+                            text</a>. And all that just to give you an idea of how tooltips would look when used in
+                        real-world situations. So hopefully you've now seen how <a href="#" data-bs-toggle="tooltip"
+                                                                                   data-bs-title="Another one here too">these
+                            tooltips on links</a> can work in practice, once you use them on <a href="#"
+                                                                                                data-bs-toggle="tooltip"
+                                                                                                data-bs-title="The last tip!">your
+                            own</a> site or project.</p>
+                </li>
             </ul>
+
+            <div class="alert alert-success" role="alert"{{ stimulus_controller('hello') }}>
+                <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+            </div>
 
             <p>
 
-            <img src="{{ asset('images/wtfpl-logo.png') }}" alt="WTFPL Logo">
+                <img src="{{ asset('images/wtfpl-logo.png') }}" alt="WTFPL Logo">
 
             </p>
         </div>
