--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -2,6 +2,13 @@
 
 {% block title %}Hello DefaultController!{% endblock %}
 
+{% block javascripts %}
+    {{ parent() }}
+    <script type="module">
+        import '{{ asset('lib/bootstrap_test.js') }}';
+    </script>
+{% endblock %}
+
 {% block body %}
     <main class="flex-shrink-0">
         <div class="container">
@@ -16,8 +23,7 @@
 
             <h4>
                 We are using Symfony <code>{{ symfony_version }}</code> in <code>{{ app.environment }}</code> mode on
-                PHP
-                <code>{{ php_version }}</code>.
+                PHP <code>{{ php_version }}</code>.
             </h4>
 
             <p class="lead">
@@ -39,6 +45,9 @@
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Launch demo modal
                     </button>
+                    <button type="button" class="btn btn-primary" id="liveToastBtn">
+                        Show live toast
+                    </button>
                 </li>
                 <li>
                     <p class="muted">Placeholder text to demonstrate some <a href="#" data-bs-toggle="tooltip"
@@ -53,21 +62,79 @@
                                                                                                 data-bs-title="The last tip!">your
                             own</a> site or project.</p>
                 </li>
+                <li>
+                    <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover"
+                            data-bs-title="Popover title"
+                            data-bs-content="And here's some amazing content. It's very engaging. Right?">Click to
+                        toggle popover
+                    </button>
+
+                </li>
             </ul>
 
             <div class="alert alert-success" role="alert"{{ stimulus_controller('hello') }}>
-                <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+                Stimulus test...
             </div>
 
-            <p>
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Accordion Item #1
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Accordion Item #2
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Accordion Item #3
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <p class="d-flex justify-content-center">
                 <img src="{{ asset('images/wtfpl-logo.png') }}" alt="WTFPL Logo">
-
             </p>
         </div>
     </main>
 
 
+
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">Bootstrap</strong>
+                <small>11 mins ago</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                Hello, world! This is a toast message.
+            </div>
+        </div>
+    </div>
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
