Add bootstrap icons

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
     {% block stylesheets %}
         {{ ux_controller_link_tags() }}
         <link rel="stylesheet" href="{{ asset('vendor/bootstrap.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('styles/bootstrap-icons.css') }}">
         <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
     {% endblock %}
 
