--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,17 +12,13 @@
 
     {% block stylesheets %}
         {{ ux_controller_link_tags() }}
-        <link rel="stylesheet" href="{{ asset('vendor/bootstrap.min.css') }}">
-        <link rel="stylesheet" href="{{ asset('styles/bootstrap-icons.css') }}">
-        <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
     {% endblock %}
 
     {% block javascripts %}
-        {{ importmap() }}
+        {{ importmap('app') }}
     {% endblock %}
 </head>
 <body class="d-flex flex-column h-100">
-
 
 <header>
     {% include '_/_nav_bar.html.twig' %}
