--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" class="h-100" data-bs-theme="auto">
 <head>
+    <script src="{{ asset('js/twbs/color-modes.js') }}"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
