--- a/templates/_/_nav_bar.html.twig
+++ b/templates/_/_nav_bar.html.twig
@@ -62,7 +62,7 @@
                 <ul class="navbar-nav mb-2 mb-md-0 d-flex">
                     <li class="nav-item">
                         <a class="nav-link" accesskey="l" href="{{ path('login') }}" title="Login">
-                            <i class="bi-box-arrow-in-down-right"></i>
+                            <twig:ux:icon name="bi:box-arrow-in-down-right" />
                         </a>
                     </li>
                 </ul>
