--- a/templates/_/_footer.html.twig
+++ b/templates/_/_footer.html.twig
@@ -1,6 +1,10 @@
 <footer class="footer mt-auto py-3 bg-body-tertiary">
     <div class="container">
-        <span class="float-end">Made with <a href="https://symfony.com">Symfony</a></span>
+        <span class="float-end">
+            Made with <a href="https://symfony.com">
+                <twig:ux:icon name="fa-brands:symfony" /> Symfony
+            </a>
+        </span>
 
         <span class="text-body-secondary">Place footer content here.</span>
     </div>
