--- a/templates/_/_nav_bar.html.twig
+++ b/templates/_/_nav_bar.html.twig
@@ -16,21 +16,17 @@
                         <a class="nav-link" href="#">UserMenu</a>
                     </li>
                     {% if is_granted('ROLE_ADMIN') %}
-                        <li>
-                            <a class="nav-link" href="#">Admin</a>
+                        <li class="nav-item dropdown">
+                            <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                Admin
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-dark">
+                                <li><a class="dropdown-item" href="{{ path('app_admin_about') }}">About</a></li>
+                                <li><a class="dropdown-item" href="{{ path('app_admin_logview') }}">Logview</a></li>
+                            </ul>
                         </li>
                     {% endif %}
                 {% endif %}
-                <li class="nav-item dropdown">
-                    <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-dark">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
             </ul>
 
             <form class="d-flex" role="search">
