--- a/templates/_/_nav_bar.html.twig
+++ b/templates/_/_nav_bar.html.twig
@@ -21,8 +21,8 @@
                                 Admin
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="{{ path('app_admin_about') }}">About</a></li>
-                                <li><a class="dropdown-item" href="{{ path('app_admin_logview') }}">Logview</a></li>
+                                <li><a class="dropdown-item" href="{{ path('app_system_about') }}">About</a></li>
+                                <li><a class="dropdown-item" href="{{ path('app_system_logview') }}">Logview</a></li>
                             </ul>
                         </li>
                     {% endif %}
