--- a/templates/auth/login.html.twig
+++ b/templates/auth/login.html.twig
@@ -47,7 +47,7 @@
         <div class="col">
             {% if 'dev' == app.environment %}
                 <h2>Dev</h2>
-                <form class="form-inline" role="form" method="post" action="{{ path('login') }}">
+                <form class="form-inline" role="form" method="post" action="{{ path('app_login') }}">
                     {% if error %}
                         <div class="alert alert-danger">
                             {{ error.message }}
