--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -22,7 +22,7 @@
     {% else %}
         <h4>
             Use the <code>symfony console user-admin</code> command to create a user so you can
-            <a href="{{ path('login') }}">log in</a>!
+            <a href="{{ path('app_login') }}">log in</a>!
         </h4>
     {% endif %}
 
