--- a/templates/_/_nav_bar.html.twig
+++ b/templates/_/_nav_bar.html.twig
@@ -21,6 +21,7 @@
                                 Admin
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark">
+                                <li><a class="dropdown-item" href="{{ path('app_user_index') }}">Users</a></li>
                                 <li><a class="dropdown-item" href="{{ path('app_system_about') }}">About</a></li>
                                 <li><a class="dropdown-item" href="{{ path('app_system_logview') }}">Logview</a></li>
                             </ul>
@@ -48,7 +49,7 @@
                             <hr class="dropdown-divider">
                         </li>
                         <li>
-                            <a class="dropdown-item" href="{{ path('logout') }}" title="Logout">
+                            <a class="dropdown-item" href="{{ path('app_logout') }}" title="Logout">
                                 <i class="bi-box-arrow-up-right"></i> Logout
                             </a>
                         </li>
@@ -57,7 +58,7 @@
             {% else %}
                 <ul class="navbar-nav mb-2 mb-md-0 d-flex">
                     <li class="nav-item">
-                        <a class="nav-link" accesskey="l" href="{{ path('login') }}" title="Login">
+                        <a class="nav-link" accesskey="l" href="{{ path('app_login') }}" title="Login">
                             <twig:ux:icon name="bi:box-arrow-in-down-right" />
                         </a>
                     </li>
